# ARMSparse

./: CMakeLists.txt  README.md  SDMM.cpp  SpMM.cpp  SpMV.cpp  arm_sparse_saxpy.cpp  armsparse_spmv_suitsparse.cpp  compare.cpp  coosdmm.cpp  sparseMatrixAdd.cpp  sparseTranspose.cpp  suitesparse.cpp  suitesparse_sdmm.cpp  suitesparse_spmm.cpp  suitesparse_spmv.cpp
armadillo-10.5.1/: README.md
armadillo-10.5.1/examples/lib_win64/: README.txt
benchmark/armadillo/: armadilloADD.cpp  armadilloTranspose.cpp  armadillo_sdmm.cpp  armadillo_sdmm_suitesparse.cpp  armadillo_spmm.cpp  armadillo_spmm_suitesparse.cpp  armadillo_spmv.cpp
benchmark/eigen/: EigenSpMM.cpp  Eigen_sdmm_suitesparse.cpp  Eigen_sparseAdd.cpp  Eigen_spmm_suitesparse.cpp  Eigen_spmv_suitesparse.cpp  eigenSparseVector.cpp  eigenSpmv.cpp  eigen_sdmm_suitesparse.cpp  eigen_spmm.cpp  eigen_spmm_suitesparse.cpp  eigen_spmv.cpp  eigen_spmv_suitesparse.cpp  eigen_transpose.cpp
datasets/: Olivetti_norm_10NN.mtx  big.mtx  gre_1107.mtx  ibm32.mtx  suitesparse.cpp  test.cpp
gcn/dgl-custom/benchmark/gcn/: gcn_dgl.py
gcn/pytorch-custom/: gcn_custom.py  gcn_pyg.py  op.py  spmm.cpp  spmm_kernel.cu
gcn/pytorch-custom/pytorch_geometric/torch_geometric/datasets/: planetoid.py
numaAware/: balanceNUMAAwareSPDM.cpp  numaAwareSDMM.cpp  numaAwareSPDM.cpp  numaAwareSpMM.cpp  numaAwareSpMV.cpp
